@@ -1,5 +1,6 @@
 *Version 2.2.1*
 * License bug where web server was loaded before license and was always limiting ip addresses to 3
+* Fixed bugs in Point Hierarchy importer to allow merging of folders.  Folders with the same name are merged into system.  Points duplicated across folders will only be saved as the last folder they are stored in.
 
 
 *Version 2.2.0*
